scss/styles.scss
@import url('https://fonts.googleapis.com/css?family=Asap|Open+Sans|Abril+Fatface|Racing+Sans+One|Ultra');
@import "_cust_variables";

@mixin sys_font(
  $weight: 700,
  $size: 10px,
  $color: 'black',
  $line: 1.1,
  $spacing: 1px
) {
  font-weight: $weight;
  font-style: normal;
  font-family: 'Asap', sans-serif;
  color: $color;
  font-size: $size;
  line-height: $line;
  letter-spacing: $spacing;
}

@mixin btn($color: 'blue', $hover_color: 'yellow') {
  color: white;
  padding: 15px 35px;
  text-decoration: none;
  font-family: 'Asap', sans-serif;
  font-weight: 700;
  font-style: normal;
  border-color: transparent;
  background-color: $color;
  transition: background-color 0.2s ease-out;
  &:hover {
    background-color: $hover_color;
  }
}

@mixin background_img($path) {
  background-image: url($path);
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
}

.wrapper {
  display: grid;
  grid-template-rows: auto auto 1fr auto;
  height: 100vh;
  .header {
    display: grid;
    grid-template-rows: repeat(2, auto);
    .header-info {
      margin: 0 15%;
      display: grid;
      grid-gap: 30px;
      grid-template-columns: 1fr auto auto;
      grid-auto-flow: column;
      @media screen and (max-width: $tablet_bp) {
        grid-template-columns: 1fr;
        grid-auto-flow: row;
        font-size: 25px;
        grid-gap: 10px;
        margin: 10px 0px;
        padding-left: 25%;
      }
      .logo {
        display: grid;
        font-family: 'Open Sans', sans-serif;
        grid-template-columns: auto 1fr;
        grid-gap: 20px;
        align-content: center;
        @media screen and (max-width: $tablet_bp) {
          font-size: 25px;
        }
        img {
          min-width: 100%;
        }
        span {
          align-self: center;
          font-weight: 400;
          font-size: 34px;
          color: $blue;
          line-height: 25px;
          font-family: 'Racing Sans One', cursive;
          @media screen and (max-width: $tablet_bp) {
            // font-size: 25px;
          }
        }
      }
      .email {
        @media screen and (max-width: $tablet_bp) {
        }
      }
      .email,
      .phone {
        display: grid;
        grid-gap: 15px;
        grid-template-columns: auto 1fr;
        grid-auto-flow: column;
        align-items: center;
        @media screen and (max-width: $tablet_bp) {
        }
        div {
          display: grid;
          font-family: 'Open Sans', sans-serif;
        }
        i {
          padding: 10px;
          border: 1px solid lightgray;
          border-radius: 50%;
          color: grey;
          font-size: 25px;
          @media screen and (max-width: $tablet_bp) {
            padding: 22px;
          }
        }
      }
    }
    .header-menu {
      // @media screen and (max-width: $tablet_bp) {
      //   padding: 60px 15px;
      // }
      display: grid;
      grid-gap: 3em;
      grid-template-columns: 1fr repeat(5, auto) 1fr;
      background-color: $blue;
      padding: 15px 0;
      font-size: 12px;
      font-weight: 800;
      text-transform: uppercase;
      .navLink {
        font-family: 'Open Sans', sans-serif;
        font-weight: 700;
        font-style: normal;
        color: white;
        padding: 15px 10px;
        text-decoration: none;
        background-color: transparent;
        transition: background-color 0.2s ease-out;
        &:hover {
          background-color: $light_blue;
        }
      }
    }
  }

  .slider {
    background-image: url(../images/slider/slider-3.jpg);
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding-left: 15%;
    min-height: 600px;
    align-content: center;
    .slider-text {
      display: grid;
      p {
        max-width: 400px;
      }
      p:nth-child(1) {
        text-transform: uppercase;
        @include sys_font($size: 18px);
      }
      p:nth-child(2) {
        @include sys_font(700, 55px, $black, 1, -2px);
        span {
          color: $blue;
        }
      }
      p:nth-child(3) {
        @include sys_font(400, 15px, $black, 1.4, 0px);
        margin-bottom: 60px;
      }
      .quote-btn {
        @include btn($blue, $light_blue);
      }
    }
  }

  .content {
    .get_estimate {
      display: grid;
      grid-gap: 20px;
      grid-template-columns: 1fr 1fr;
      @media screen and (max-width: $tablet_bp) {
        grid-template-columns: 1fr;
      }
      img {
        margin-top: 20px;
        width: 100%;
        justify-self: center;
        @media screen and (max-width: $tablet_bp) {
          margin-top: 15px;
          max-width: 50%;
        }
      }
      .get_estimate_text {
        margin: 150px 0px;
        @media screen and (max-width: $small_screen) {
          grid-template-columns: auto;
          margin: 60px 20px;
        }
        p:nth-child(1) {
          @include sys_font(900, 45px, $black, 1.1, -1px);
        }
        p:nth-child(2) {
          @include sys_font(400, 16px, $black, 1.7, 0px);
        }
        ul {
          list-style: none;
          i {
            font-size: 20px;
            position: relative;
            margin-right: 5px;
            top: 6px;
            color: $light_blue;
          }
          li {
            @include sys_font(700, 13px, $black, 1.3, 0px);
          }
        }
        .quote_btn {
          position: relative;
          top: 25px;
          @include btn($blue, $light_blue);
        }
      }
    }
    .services {
      display: grid;
      grid-template-columns: 1fr 1fr;
      @media screen and (max-width: $tablet_bp) {
        grid-template-columns: 1fr;
        grid-auto-flow: row;
      }
      .services_list_block {
        padding: 150px 15px;
        background-image: url(../images/services/bg.jpg);
        background-position: top;
        background-repeat: no-repeat;
        background-size: cover;
        @media screen and (max-width: $tablet_bp) {
          padding: 60px 15px;
        }
        .services_list {
          display: grid;
          grid-template-columns: 1fr 1fr;
          grid-gap: 20px;
          grid-template-rows: 1fr 1fr;
          background-color: rgba(255, 255, 255, 0.95);
          padding: 15px;
          .service {
            display: grid;
            // grid-gap: 15px;
            grid-template-columns: auto 1fr;
            margin-top: 15px;
            div:nth-child(2) {
              margin: 0 15px;
            }
            img {
              min-width: 45px;
              max-width: 45px;
            }
            .service_title {
              @include sys_font(700, 15px, 'black', 1.4, 1px);
              margin: 0;
              padding: 0;
            }
            .service_desc {
              grid-column: span 2;
              margin-top: 15px;
              @include sys_font(400, 14px, 'black', 1.6, 0px);
            }
          }
        }
      }
      .services_title_block {
        @include background_img('../images//services/bg_title.jpg');
        padding: 150px 30px;
        color: white;
        @media screen and (max-width: $tablet_bp) {
          padding: 60px 15px;
          order: -1;
        }
        p:nth-child(1) {
          @include sys_font(700, 40px, 'white', 1.1, -1px);
        }
        p:nth-child(2) {
          @include sys_font(400, 14px, 'white', 1.6, 0px);
          margin-bottom: 50px;
          max-width: 600px;
        }
        .service_btn {
          @include btn($light_blue, $blue);
        }
      }
    }
    .guarantee {
      display: grid;
      grid-template-columns: 1fr 1fr;
      background-color: $light_grey;
      padding: 40px 15%;
      @media screen and (max-width: $tablet_bp) {
        grid-template-columns: 1fr;
        grid-auto-flow: row;
      }
      .guarantee_header{
        grid-column: span 2;
        text-align: center;
        @media screen and (max-width: $tablet_bp) {
          grid-column: span 1;
        }
      }
      .guarantee_header {
        margin: 25px;
        p:nth-child(1){
          @include sys_font(700, 30px, $black, 1.1, -1px);
        }
        p:nth-child(2){
          @include sys_font(400, 20px, $black, 1, -1px);
        }
      }
      .guarantee_item {
        display: grid;
        grid-gap: 15px;
        grid-template-columns: auto 1fr;
        margin: 15px 25px;
        p {
          margin: 0 0;
        }
        .guarantee_title {
          @include sys_font(700, 15px, $black, 1.4, 1px);
        }
        .guarantee_desc {
          @include sys_font(400, 14px, $black, 1.6, 0px);
          margin-top: 8px;
        }
      }
    }
    .contact_us {
      display: grid;
      grid-template-columns: auto 1fr;
      padding:50px 10%;
      background-image: url("../images/contact_us.jpg");
      background-position: top;
      background-repeat: no-repeat;
      background-size: cover;
      color: white;
      @media screen and (max-width: $tablet_bp) {
        grid-template-columns: 1fr;
      }
      .contact_us_header {
        padding: 100px 60px;
        @media screen and (max-width: $tablet_bp) {
          padding: 0px 30px;
          display: grid;
          justify-content: center;
        }
        .contact_us_title {
          @include sys_font(700, 40px, "white", 1.1, -1px);
        }
        .contact_email,
        .contact_phone {
          display: grid;
          grid-gap: 15px;
          grid-template-columns: auto 1fr;
          grid-auto-flow: column;
          align-items: center;
          margin: 15px 0px;;
          div {
            b {
              @include sys_font(700, 20px, "white", 1.4, 1px);
            }
            @include sys_font(400, 15px, "white", 1.4, 0px);
            display: grid;
          }
          span {
            padding: 15px;
            font-size: 25px;
            color: $light_blue;
            @media screen and (max-width: $tablet_bp) {
              // padding: 22px;
            }
          }
        }
      }
      .contact_us_form {
        .form_title {
          text-align: center;
          background-color: $light_blue;
          padding: 15px;
          @include sys_font(700, 25px, "white", 1.1, -1px);
        }
        padding: 60px 20px;
        form {
          background-color: rgba(255, 255, 255, 1);
          color: $black;
          padding: 20px;
          label {
            // color: $black;
            font-size: 12px;
          }
          .submit_btn {
            @include btn($blue, $light_blue );
            padding: 10px 35px;
          }
        }
      }
    }
  }
}

